--- a/manuscript_Rmd/Acadian_seaplants_v1.tex
+++ b/manuscript_Rmd/Acadian_seaplants_v1.tex
@@ -1,35 +1,45 @@
 \documentclass[11pt,]{article}
+\usepackage[left=1in,top=1in,right=1in,bottom=1in]{geometry}
+\newcommand*{\authorfont}{\fontfamily{phv}\selectfont}
 \usepackage[]{mathpazo}
-\usepackage{amssymb,amsmath}
-\usepackage{ifxetex,ifluatex}
-\usepackage{fixltx2e} % provides \textsubscript
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+
+
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-\else % if luatex or xelatex
-  \ifxetex
-    \usepackage{mathspec}
-  \else
-    \usepackage{fontspec}
-  \fi
-  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
-\fi
-% use upquote if available, for straight quotes in verbatim environments
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-% use microtype if available
-\IfFileExists{microtype.sty}{%
-\usepackage{microtype}
-\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
-}{}
-\usepackage[margin=1in]{geometry}
-\usepackage{hyperref}
-\hypersetup{unicode=true,
-            pdftitle={The effect of Ascophyllum nodosum extracts on tomato and pepper plant productivity and their associated fungal and bacterial communities.},
-            pdfkeywords={Stella Marris, 16S, ITS, microbial diversity, Illumina MiSeq},
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
+
+
+
+\usepackage{abstract}
+\renewcommand{\abstractname}{}    % clear the title
+\renewcommand{\absnamepos}{empty} % originally center
+
+\renewenvironment{abstract}
+ {{%
+    \setlength{\leftmargin}{0mm}
+    \setlength{\rightmargin}{\leftmargin}%
+  }%
+  \relax}
+ {\endlist}
+
+\makeatletter
+\def\@maketitle{%
+  \newpage
+%  \null
+%  \vskip 2em%
+%  \begin{center}%
+  \let \footnote \thanks
+    {\fontsize{18}{20}\selectfont\raggedright  \setlength{\parindent}{0pt} \@title \par}%
+}
+%\fi
+\makeatother
+
+
+
+
+\setcounter{secnumdepth}{0}
+
 \usepackage{longtable,booktabs}
+
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -39,73 +49,152 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
-\setlength{\emergencystretch}{3em}  % prevent overfull lines
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{0}
-% Redefines (sub)paragraphs to behave more like sections
-\ifx\paragraph\undefined\else
-\let\oldparagraph\paragraph
-\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-\let\oldsubparagraph\subparagraph
-\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
 
-%%% Use protect on footnotes to avoid problems with footnotes in titles
-\let\rmarkdownfootnote\footnote%
-\def\footnote{\protect\rmarkdownfootnote}
-
-%%% Change title format to be more compact
-\usepackage{titling}
-
-% Create subtitle command for use in maketitle
-\newcommand{\subtitle}[1]{
-  \posttitle{
-    \begin{center}\large#1\end{center}
-    }
-}
-
-\setlength{\droptitle}{-2em}
-
-  \title{\textbf{The effect of \emph{Ascophyllum nodosum} extracts on tomato and
+\title{\textbf{The effect of \emph{Ascophyllum nodosum} extracts on tomato and
 pepper plant productivity and their associated fungal and bacterial
-communities.}}
-    \pretitle{\vspace{\droptitle}\centering\huge}
-  \posttitle{\par}
-    \author{true}
-    \preauthor{\centering\large\emph}
-  \postauthor{\par}
-      \predate{\centering\large\emph}
-  \postdate{\par}
-    \date{September 12, 2018}
+communities.}  }
+
+
+
+\author{\Large Sébastien Renaut\textsuperscript{1,2},Jacynthe
+Masse\textsuperscript{1,2}, Mengxuan Kong\textsuperscript{1,2}, Mohamed
+Hijri\textsuperscript{1,2}\vspace{0.05in} \newline\normalsize\emph{\textsuperscript{1}Département de Sciences Biologiques, Institut de
+Recherche en Biologie Végétale, Université de Montréal, 4101 Sherbrooke
+Est, Montreal, H1X 2B2, Quebec, Canada. \textsuperscript{2}Quebec Centre
+for Biodiversity Science, Montreal, Quebec, Canada}  }
+
+
+\date{}
+
+\usepackage{titlesec}
+
+\titleformat*{\section}{\normalsize\bfseries}
+\titleformat*{\subsection}{\normalsize\itshape}
+\titleformat*{\subsubsection}{\normalsize\itshape}
+\titleformat*{\paragraph}{\normalsize\itshape}
+\titleformat*{\subparagraph}{\normalsize\itshape}
+
+
+
+
+
+\newtheorem{hypothesis}{Hypothesis}
+\usepackage{setspace}
+
+\makeatletter
+\@ifpackageloaded{hyperref}{}{%
+\ifxetex
+  \PassOptionsToPackage{hyphens}{url}\usepackage[setpagesize=false, % page size defined by xetex
+              unicode=false, % unicode breaks when used with xetex
+              xetex]{hyperref}
+\else
+  \PassOptionsToPackage{hyphens}{url}\usepackage[unicode=true]{hyperref}
+\fi
+}
+
+\@ifpackageloaded{color}{
+    \PassOptionsToPackage{usenames,dvipsnames}{color}
+}{%
+    \usepackage[usenames,dvipsnames]{color}
+}
+\makeatother
+\hypersetup{breaklinks=true,
+            bookmarks=true,
+            pdfauthor={Sébastien Renaut\textsuperscript{1,2},Jacynthe
+Masse\textsuperscript{1,2}, Mengxuan Kong\textsuperscript{1,2}, Mohamed
+Hijri\textsuperscript{1,2} (\textsuperscript{1}Département de Sciences Biologiques, Institut de
+Recherche en Biologie Végétale, Université de Montréal, 4101 Sherbrooke
+Est, Montreal, H1X 2B2, Quebec, Canada. \textsuperscript{2}Quebec Centre
+for Biodiversity Science, Montreal, Quebec, Canada)},
+             pdfkeywords = {Stella Marris, 16S, ITS, microbial diversity, Illumina MiSeq},  
+            pdftitle={\textbf{The effect of \emph{Ascophyllum nodosum} extracts on tomato and
+pepper plant productivity and their associated fungal and bacterial
+communities.}},
+            colorlinks=true,
+            citecolor=blue,
+            urlcolor=blue,
+            linkcolor=magenta,
+            pdfborder={0 0 0}}
+\urlstyle{same}  % don't use monospace font for urls
+
+% set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
 
 \usepackage[left]{lineno}
 \linenumbers
 
+
+% add tightlist ----------
+\providecommand{\tightlist}{%
+\setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \begin{document}
-\maketitle
+	
+% \pagenumbering{arabic}% resets `page` counter to 1 
+%
+% \maketitle
+
+{% \usefont{T1}{pnc}{m}{n}
+\setlength{\parindent}{0pt}
+\thispagestyle{plain}
+{\fontsize{18}{20}\selectfont\raggedright 
+\maketitle  % title \par  
+
+}
+
+{
+   \vskip 13.5pt\relax \normalsize\fontsize{11}{12} 
+\textbf{\authorfont Sébastien Renaut\textsuperscript{1,2},Jacynthe
+Masse\textsuperscript{1,2}, Mengxuan Kong\textsuperscript{1,2}, Mohamed
+Hijri\textsuperscript{1,2}} \hskip 15pt \emph{\small \textsuperscript{1}Département de Sciences Biologiques, Institut de
+Recherche en Biologie Végétale, Université de Montréal, 4101 Sherbrooke
+Est, Montreal, H1X 2B2, Quebec, Canada. \textsuperscript{2}Quebec Centre
+for Biodiversity Science, Montreal, Quebec, Canada}   
+
+}
+
+}
+
+
+
+
+
+
+
+
 \begin{abstract}
-The abstract will be written here
+
+    \hbox{\vrule height .2pt width 39.14pc}
+
+    \vskip 8.5pt % \small 
+
+\noindent The abstract will be written here
+
+
+\vskip 8.5pt \noindent \emph{Keywords}: Stella Marris, 16S, ITS, microbial diversity, Illumina MiSeq \par
+
+    \hbox{\vrule height .2pt width 39.14pc}
+
+
+
 \end{abstract}
 
-\newpage 
+
+\vskip 6.5pt
+
+
+\noindent \doublespacing \newpage 
 
 \section{INTRODUCTION}\label{introduction}
 
 Liquid extracts of marine macroalga are used as biostimulants in
 agriculture. These extracts contain phytohormones that can influence
 physiological processes even at very low concentrations Craigie (2011).
-Stella Maris® is derived from fresh \emph{Ascophyllum nodosum} harvested
-from the nutrient-laden waters of the North Atlantic off the Eastern
-Coast of Canada.\\
+Stella Maris® is derived from fresh \emph{Ascophyllum nodosum} algae
+harvested from the nutrient-laden waters of the North Atlantic off the
+Eastern Coast of Canada.\\
 \hspace*{0.333em}\\
 The aim of this project was to develop a better understanding of the
 effects of \emph{A. nodosum} extracts on plant growth. We tested the
@@ -122,41 +211,42 @@ nodosum} extracts.\\
 Two greenhouse experiment were set up in large trays (60x30x18 cm) in
 November (tomato {[}cv: Totem Hybrid\#A371, William Dam Seeds Ltd{]})
 and December (Pepper {[}cv: Ace Hybrid\#318, William Dam Seeds Ltd{]})
-2015. Soil was collected form an agricultural field under organic regime
-at the IRDA research station in St-Bruno (Qc, Canada) on October 7th
-2015 (loam sandy soil, 15 cm top layer collected). Soil characteristics
-(four samples) were measured by AgriDirect (Longueuil, Qc, Canada) to
-determine\ldots{}\\
+2015. Soil was collected from an agricultural field under organic regime
+at the IRDA research station in St-Bruno (Qc, Canada) on October
+7\textsuperscript{th} 2015 (loamy sand soil, 15 cm top layer collected).
+Soil characteristics (pH, conductivity, nutrients, see Supplementary
+Table 1) were measured by AgriDirect (Longueuil, Qc, Canada).\\
 \hspace*{0.333em}\\
 For each species tested (Tomato - \emph{Solanum lycopersicum}, Pepper -
 \emph{Capsicum annuum}), a randomized split block design (Figure 1) was
 used with four trays set up per block (eight blocks). Half of the trays
 were fertilized (fertilization treatment), as described below. Half of
 the trays were also planted with four replicate plants each, while the
-other trays were left bare. This allowed comparing the fungal and
-bacteria soil communities with respect to the fertilization and planting
-treatment. ~\\
-\includegraphics[width=5.20833in]{../figures/Figure1.png}\\
+other trays were left bare. This allowed a direct comparison of the
+fungal and bacteria soil communities with respect to the fertilization
+and planting treatment. ~\\
+\includegraphics[width=6.25000in]{../figures/Figure1.png}\\
 \textbf{Figure 1: experimental design}\\
 \hspace*{0.333em}\\
-Tomato plants were fertilized using multipurpose organic fertilizer
-(pure hen manure, 18 g per tray repeated every 4 weeks, 5-3-2) from
-Acti-sol (Notre-Dame-du-Bon-Conseil, Qc, Canada) in addition to Stella
-Maris® (3.5 ml per 1L, each tray received 250 ml, repeated every 2
-weeks) for the duration of the experiment. Stella Maris® is a registered
-trademark from Acadian Seaplants Ltd. (Darmouth, NS, Canada). It is
-primarily composed of \emph{Ascophyllum nodosum} seaweed and is
-advertized as a natural activator of the crops' own growth and defense
-mechanisms to improve root growth and resist temperature, drought, and
-salinity stress in order to maximize yield and crop qualities (Acadian
-Seaplants Ltd. 2018). Pepper plants were fertilized using solely Stella
-Maris (3.5 ml per 1L, each tray received 250 ml, repeated every 2 weeks)
-for the duration of the experiment.\\
-\hspace*{0.333em}\\
+Half of the tomato plants were fertilized using multipurpose organic
+fertilizer (pure hen manure, 18 g per tray repeated every 4 weeks,
+5-3-2) from Acti-sol (Notre-Dame-du-Bon-Conseil, Qc, Canada) in addition
+to Stella Maris® (3.5 ml per 1L, each tray received 250 ml, repeated
+every 2 weeks) for the duration of the experiment. The other half were
+unfertilized. Stella Maris® is a registered trademark from Acadian
+Seaplants Ltd. (Darmouth, NS, Canada). It is primarily composed of
+\emph{Ascophyllum nodosum} seaweed and is advertized as a natural
+activator of the crops' own growth and defense mechanisms to improve
+root growth and resist temperature, drought, and salinity stress in
+order to maximize yield and crop qualities (Acadian Seaplants Ltd.
+2018). Half of the pepper plants were treated using solely Stella Maris
+(3.5 ml per 1L, each tray received 250 ml, repeated every 2 weeks) for
+the duration of the experiment. The other half were untreated. ~\\
 Thrips were managed with \emph{Neoseiulus cucumeris} (syn.
 \emph{Amblyseius cucumeris}) (100 bags), Fungus gnat and thrips were
 also controlled using predatory mite \emph{Gaeolaelaps gillespiei} (1L).
-Plants were treated once a week with Oïdium Milstop.\\
+Plants were treated once a week with Oïdium Milstop to control the
+fungus.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Plant productivity}\\
@@ -206,9 +296,10 @@ Centre) and further processed as described below.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Bioinformatics}\\
-All bioinformatics, statistical, and graphic analyses further described
-were performed in R 3.4.4 (R Core Team 2018) and detailed scripts are
-available here (\url{https://github.com/seb951/Acadian_Seaplants}).\\
+All bioinformatics, statistical, and graphical analyses further
+described were performed in R 3.4.4 (R Core Team 2018) and detailed
+scripts are available here
+(\url{https://github.com/seb951/Acadian_Seaplants}).\\
 \hspace*{0.333em}\\
 We used the \texttt{R} package \texttt{dada2} Callahan et al. (2016) to
 infer \emph{Amplicon Sequence Variants (ASVs)}. \texttt{Dada2} offers
@@ -230,7 +321,7 @@ assigned using the Ribosomal Database Project (RDP) Naive Bayesian
 Classifier algorithm from Wang et al. (2007). Depending on support
 (minimum bootstrap support of 80), we assigned taxonomy from Kingdom to
 species. We used the silva database formatted for \texttt{dada2} to
-infer bacterial taxa Callahan (2018) We used the Community (2018) fasta
+infer bacterial taxa Callahan (2018). We used the Community (2018) fasta
 release (including singletons) to infer fungal taxa after formatting it
 to the \texttt{dada2} format using a custom \texttt{R} script. The
 pipeline was run on a multithreaded (48 CPUs) computer infrastructure
@@ -249,9 +340,13 @@ dry weight, roots dry weight). We used linear mixed effect models (LMM)
 in the R package \texttt{nlme} Pinheiro et al. (2017), which are more
 appropriate than an Analysis of Variance (ANOVA) given the current block
 design (blocks and replicates nested within a block were treated as
-random variables). All six plant productivity measures were square root
-transformed in order to help satisfy the assumption of normality of the
-residuals in the LMM statistical framework.\\
+random variables). All six plant productivity measures were either
+square root or log transformed in order to help satisfy the assumption
+of normality of the residuals in the LMM statistical framework. For the
+variables \emph{fruit number} and \emph{average fruit weight}, we also
+used a permutation-based 2-way ANOVA (Anderson \& Legendre (1999)) given
+that the residuals of the LMM were not normally distributed, and results
+were similar.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Statistical analyses - microbial and fungal diversity}\\
@@ -272,7 +367,7 @@ fertilization treatment on the abundance ASV taxa in the tomato and
 pepper experiments. To reduce the complexity of the datasets, relative
 abundance of all taxa were calculated per family using the \texttt{R}
 package \texttt{dplyr} Wickham et al. (2015). Barplots were drawn using
-\texttt{ggplot2} (Hadley 2016) to vizualize the communities. ASV
+\texttt{ggplot2} Wickham (2016) to vizualize communities. ASV
 (\(a\))-diversity was calculated for each sample using the inverse
 Simpson diversity index in \texttt{vegan} Oksanen et al. (2013). The
 effect of fertilization treatment, species (and planting for soil
@@ -293,32 +388,35 @@ model.\\
 \hspace*{0.333em}\\
 We also performed constrained ordinations (CCAs) using
 Hellinger-transformed ASV abundance data in \texttt{vegan} Oksanen et
-al. (2013) to visually assess the grouping of samples, ASVs and their
-association with productivity variables. Data were analysed separately
-for fungal-root, fungal-soil, bacterial-root and bacterial-soil, but
-also according to species (tomato/pepper), given that analyses of
-diversity showed that tomato and pepper were markedly different. This
-gave a total of eight CCAs. Data were constrained based on four of the
-productivity measures (fruit number, average fruits weight, shoots fresh
-weight, roots fresh weight). We excluded the shoot \& root dry weights
-as constraints to simplify the model and given that they were highly
+al. (2013) to visually assess (\emph{species} scaling based on ASV
+matrix) the grouping of samples, ASVs and their association with
+productivity variables. Data were analysed separately for fungal-root,
+fungal-soil, bacterial-root and bacterial-soil, but also according to
+species (tomato/pepper), given that analyses of \(a\) diversity showed
+that tomato and pepper were markedly different. This gave a total of
+eight CCAs. Data were constrained based on four of the productivity
+measures (fruit number, average fruits weight, shoots fresh weight,
+roots fresh weight). We excluded the shoot \& root dry weights as
+constraints to simplify the model and given that they were highly
 correlated with the fresh weigth already included as constraints
 (\(r^2\)=0.98 and 0.76 for shoot dry/fresh weights and root dry/fresh
 weights, respectively). ~\\
 \hspace*{0.333em}\\
-We then identified the ten ASVs most positively associated with the
-productivity measures of fruit number, shoots fresh weight and roots
-fresh weight from each constrained ordinations for a total of 40 fungal
-and 40 bacterial candidates ASVs. We aligned sequences using the
-Bioconductor \texttt{R} package \texttt{decipher} Wright (2016) and
-build pairwise distances matrices using a JC69 substitution models of
-DNA sequence evolution (equal base frequencies, Jukes \& Cantor (1969))
-in \texttt{phangorn} Schliep (2010). Phylogenetic trees for bacteria and
-fungi were plotted using \texttt{ape} Paradis, Claude \& Strimmer
-(2004). This permitted to identify if similar candidate ASVs were found
-under different experimental conditions (soil/root, pepper/tomato), thus
-reinforcing their role in productivity increase, and decreasing the
-change that these are false positive.\\
+Finally, we attempted to identify candidate ASVs positively associated
+with productivity. As such, we identified the ten ASVs most positively
+associated with the measures of fruit number, shoots fresh weight and
+roots fresh weight from each constrained ordinations for a total of 40
+fungal and 40 bacterial candidates ASVs. We aligned candidate sequences
+from these candidates ASVs using the Bioconductor \texttt{R} package
+\texttt{decipher} Wright (2016) and build pairwise distances matrices
+using a JC69 substitution models of DNA sequence evolution (equal base
+frequencies, Jukes \& Cantor (1969)) in \texttt{phangorn} Schliep
+(2010). Phylogenetic trees for bacteria and fungi were plotted using
+\texttt{ape} Paradis, Claude \& Strimmer (2004). This permitted to
+identify if similar candidate ASVs were found under different
+experimental conditions (soil/root, pepper/tomato), thus reinforcing
+their role in productivity increase, and decreasing the change that
+these are false positive.\\
 \hspace*{0.333em} ~
 
 \newpage  
@@ -326,13 +424,14 @@ change that these are false positive.\\
 \section{RESULTS}\label{results}
 
 \emph{productivity}\\
-We tested the effect of the fertilization treatment on six different
-measures of overall plant growth and productivity (fruit number, average
-fruit weight, shoots fresh weight, roots fresh weight) for both tomato
-and peppers. Visually, both above ground and below ground plant
-structure grew larger in fertilized plants, in addition to producing
-more fruits (see Figure 2 for some examples of the remarkable difference
-between fertilized and unfertilized plants). ~\\
+We tested the effect of the fertilization treatment on six measures of
+overall plant growth and productivity (fruit number, average fruit
+weight, shoots fresh weight, shoots dry weight, roots fresh weight,
+roots dry weight) for both tomato and peppers. Visually, both above
+ground and below ground plant structure grew larger in fertilized
+plants, in addition to producing more fruits (see Figure 2 for some
+examples of the striking difference between fertilized and unfertilized
+plants). ~\\
 \includegraphics[width=5.20833in]{../figures/productivity/Figure_2_photos_productivity.png}\\
 \textbf{Figure 2: Plant productivity. Photos were taken at the end of
 the experimental treatment. In each photo, fertilized plants are on the
@@ -360,37 +459,35 @@ samples combined (976,000 for fungi-soil, 920,000 for fungi-root,
 309,000 for bacteria-soil and 535,000 for bacteria-root, Table 1). Note
 that sequencing samples were analysed separately for fungal-soil,
 fungal-root, bacteria-soil and bacteria-root conditions. On average,
-46,965 paired-end reads were obtained per sample, and after quality
-filters were applied, including removing chimeras and paired-end reads
-were merged, an average of 18,435 sequences remained. While 192 soil
-samples for fungi and bacteria, and 92 root samples for fungi and
-bacteria were sequenced, three fungi-soil samples, 13 fungi-root samples
-and two bacteria-root samples were removed because they had to few reads
-based on our strict quality thresholds.\\
+46,965 paired-end reads were obtained per sample. After quality filters
+were applied, including removing chimeras, and paired-end reads were
+merged, an average of 18,435 sequences remained. While 192 soil samples
+for fungi and bacteria, and 92 root samples for fungi and bacteria were
+sequenced, three fungi-soil samples, 13 fungi-root samples and two
+bacteria-root samples were removed because they had to few reads based
+on our strict quality thresholds.\\
 \hspace*{0.333em}\\
 The \texttt{dada2} pipeline infered, on average, 112 Amplicon Sequence
-Variants were infered per sample (average of 163 fungal-soil ASV, 49
-fungal-root ASVs, 112 bacterial-soil ASVs and 122 bacterial-root ASVs).
-Many of those were unique to one of a few samples (total number of 6,178
+Variants per sample (average of 163 fungal-soil ASV, 49 fungal-root
+ASVs, 112 bacterial-soil ASVs and 122 bacterial-root ASVs). Many of
+those were unique to one of a few samples (total number of 6,178
 fungal-soil, 930 fungal-root, 10,120 bacterial-soil and 3,143
-bacterial-roots ASVs). In fact, after quality filtering ASVs that were
-found in fewer than 10\% of the samples, we retained 418, 169, 206 and
-250 ASVs and which comprised 91\%, 88\%, 50\% and 85\% of all reads in
-the fungal soil, fungal roots, bacterial soil and bacterial roots
-samples, respectively.\\
+bacterial-roots ASVs). After quality filtering ASVs that were found in
+fewer than 10\% of the samples, we retained 418, 169, 206 and 250 ASVs
+and which comprised 91\%, 88\%, 50\% and 85\% of all reads in the
+fungal-soil, fungal-root, bacterial-soil and bacterial-root samples,
+respectively.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}
 
 \begin{longtable}[]{@{}lrrrr@{}}
 \caption{Sequencing and ASV summary}\tabularnewline
 \toprule
-& fungi\_soil & fungi\_root & bacteria\_soil &
-bacteria\_root\tabularnewline
+& fungi-soil & fungi-root & bacteria-soil & bacteria-root\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-& fungi\_soil & fungi\_root & bacteria\_soil &
-bacteria\_root\tabularnewline
+& fungi-soil & fungi-root & bacteria-soil & bacteria-root\tabularnewline
 \midrule
 \endhead
 Nb\_seq\_sum & 976,000 & 309,000 & 920,000 & 535,000\tabularnewline
@@ -415,18 +512,19 @@ ASV\_persample & 163 & 49 & 112 & 122\tabularnewline
 We then analysed the whole community structure and report the relative
 abundance of taxa (family) for the fungal-soil, fungal-root,
 bacteria-soil and bacteria-root conditions (Figure 4). Fungal
-communities were dominated but Nectriaceae, both the in the root and
-soil samples. Bacterial root communities were largely dominated by the
-Cyanobacteria phylym (identified as \emph{chloroplast} according to the
+communities were dominated by Nectriaceae, both the in the root and soil
+samples. Bacterial root communities were largely dominated by the
+Cyanobacteria phylum (identified as \emph{chloroplast} according to the
 Ribosomal Database Project Naive Bayesian Classifier and the silva
-database). In fact, these ASVs are likely chloroplasts from the plant
-itself that were sequenced, despite the fact that the primer pair used
-should have primarly targeted the bacterial V3-V4 region of the 16S
-ribosomal gene. The bacterial family Bacilaceae dominated to a lesser
-extent the soil communities.\\
+database). In fact, these ASVs are likely sequenced chloroplasts from
+the plants themselves, despite the fact that the primer pair used should
+have primarly targeted the bacterial V3-V4 region of the 16S ribosomal
+gene. The bacterial family Bacilaceae dominated to a lesser extent the
+soil communities.\\
 \hspace*{0.333em}\\
-\includegraphics[width=7.29167in]{../figures/Figure4_barplots.pdf}\\
-\textbf{Figure 4: Barplots.}\\
+\includegraphics[width=7.29167in]{../figures/Figure4_FAMILY_barplots.pdf}\\
+\textbf{Figure 4: Barplots fo the relative abundance of ASVs for
+fungal-root, fungal-soil, bacteria-soil and bacteria-root}\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Local (\(a\)-diversity)}\\
@@ -449,7 +547,9 @@ bacterial diversity differed with respect to the fertilization treatment
 (\(F_{(1,67)}\)=16.48, \emph{p}-value=0.0001), and the species tested
 (\(F_{(1,67)}\)=523.42, \emph{p}-value\textless{}0.0001). ~\\
 \includegraphics[width=6.25000in]{../figures/Figure5_alpha.pdf}\\
-\textbf{Figure 5: Barplots.}\\
+\textbf{Figure 5: Boxplot of alpha diversity according to the treatment,
+species and planting effect for fungal-root, fungal-soil, bacteria-soil
+and bacteria-root.}\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Differences in species composition among sites}\\
@@ -463,13 +563,11 @@ tomato and pepper plants.
 \begin{longtable}[]{@{}lllll@{}}
 \caption{summary of PERMANOVAs*}\tabularnewline
 \toprule
-& fungi\_soil & fungi\_root & bacteria\_soil &
-bacteria-root\tabularnewline
+& fungi-soil & fungi-root & bacteria-soil & bacteria-root\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-& fungi\_soil & fungi\_root & bacteria\_soil &
-bacteria-root\tabularnewline
+& fungi-soil & fungi-root & bacteria-soil & bacteria-root\tabularnewline
 \midrule
 \endhead
 fertilization & 0.02 (4e-04) & 0.04 (0.0013) & 0.03 (1e-04) & 0.01
@@ -487,53 +585,53 @@ NA\tabularnewline
 \bottomrule
 \end{longtable}
 
-\emph{*R\textsuperscript{2} {[}percentage of variance explained by the
-term in the model{]} and associated }p\emph{-values in parentheses} ~\\
+*\(r^2\) {[}percentage of variance explained by the term in the model{]}
+and associated \emph{p}-values in parentheses. ~\\
 \hspace*{0.333em}\\
 \emph{Constrained ordinations and candidate ASVs}\\
-Constrained ordinations clearly indicated how fertilized samples
-clustered together according to their fungal or bacterial communities
-(Figure 6). It also shows how three of the constrain variables
+Constrained ordinations indicated how fertilized samples clustered
+together according to their fungal or bacterial communities (Figure 6).
+It also shows a similar association of three of the constrain variables
 (productivity measures of root fresh weight, shoots fresh weight and
-fruit number) were associated with the fertilization treatment, while
-average fruit weight behave differentially (in fact nearly orthogonally
-to the other three constrains in most ordinations).\\
+fruit number), while average fruit weight behave differentially (in fact
+nearly orthogonally to the other three constrains in most
+ordinations).\\
 \hspace*{0.333em}\\
 \includegraphics{../figures/Figure6_rda.pdf}\\
 \textbf{Figure 6: Constrained ordinations. Samples are labelled and
 colored in gray (unfertilized) or dark yellow (fertilized). Red crosses
 represent individual ASVs, while red points represent the ten ASVs most
-closely associated wih the three productivity measures of fruit number,
-shoots fresh weights and root freshweight. Blue arrows are the four
+closely associated wih the three productivity measures of root fresh
+weight, shoots fresh weight and fruit number. Blue arrows are the four
 productivity measures used as constrains in the ordinations.}\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 Next, we identified, for each ordination, the ten ASVs most closely
 related to the three constrains which behaved in a similar fashion
 (productivity measures of root fresh weight, shoots fresh weight and
-fruit number). These were considered as putative candidates most
-positively impacted (increase presence of the ASV) by fertilization. We
-further analysed the corresponding sequences for these eigthy candidates
-(ten candidates * eight ordinations) ASVs in two seperate alignments
-(one for fungi and one for bacterial ASVs) and neighbouring joining
-trees. In fungi, we identified one cluster of ASVs taxonomically
-assigned to \emph{Olpidium brassicae} (fungal obligate parasite in the
-phylum Chytridiomycota) that forms the majority of ASVs most closely
-related to productivity. In addition, we identified five different ASVs
-in both species and both root and soil, closely related
-phylogenetically. Given that no taxonomy was assigned to these sequences
-through the \texttt{dada2} RDP bootstrap approach, we used a BLASTn
-approach (against NCBI nr) to identify the most closely related
-sequences. We identified this cluster of ASVs as \emph{Rhogostoma
-schuessleri (BLASTn, e-value=2e-74)}, a protist in the phylum Cercozoa,
-which are known to be present in the soil and phyllosphere Dumack et al.
-(2017)\\
+fruit number). These ASVs were considered as putative candidates
+sequences most positively impacted (increase presence of the ASV) by
+fertilization. We further analysed the corresponding sequences for these
+eigthy candidates (ten candidates * eight ordinations) ASVs in two
+seperate alignments (one for fungi and one for bacterial ASVs) and their
+accompanying neighbouring joining trees. In fungi, we identified one
+cluster of ASVs taxonomically assigned to \emph{Olpidium brassicae}
+(fungal obligate parasite in the phylum Chytridiomycota) that forms the
+majority of ASVs most closely related to productivity. In addition, we
+identified five different ASVs in both species and both root and soil
+closely related phylogenetically. Given that no taxonomy was assigned to
+these sequences through the \texttt{dada2} RDP bootstrap approach, we
+used a BLASTn Altschul et al. (1997) approach (against NCBI nr) to
+identify the most closely related sequences. We identified this cluster
+of ASVs as \emph{Rhogostoma schuessleri (BLASTn, e-value=2e-74)}, a
+protist in the phylum Cercozoa, which are known to be present in the
+soil and phyllosphere Dumack et al. (2017) .\\
 \hspace*{0.333em}\\
 In bacteria-roots, we identified a cluster of ten closely related
 sequences taxonomically assigned to \emph{Chloroplast}, and which likely
-originate from the plant themselves. We also identified a number of ASVs
-associated with productivity in the soil of both the pepper and tomato
-plants. Notably, ASV100 \& ASV73 (\emph{Oerskovia} spp.), ASV231
+originate from the plants themselves. We also identified a number of
+ASVs associated with productivity in the soil of both the pepper and
+tomato plants. Notably, ASV100 \& ASV73 (\emph{Oerskovia} spp.), ASV231
 (\emph{Blastocatellaceae}), ASV515, ASV1105 \& ASV647
 (\emph{Bacillaceae}), ASV107 (\emph{Methyloligellaceae}) and ASV95 \&
 ASV107 (\emph{Santhobacteraceae}) were identified. ~\\
@@ -543,11 +641,17 @@ ASV107 (\emph{Santhobacteraceae}) were identified. ~\\
 roots) associated with productivity measures} ~\\
 \hspace*{0.333em}
 
-\emph{(look at mvpart package? mvpartwrapt MRT() function)}
-
 \newpage  
 
 \section{DISCUSSION}\label{discussion}
+
+\emph{• Brief recap of soil characteristics}\\
+\emph{• Overall increases in productivity in both species (but mention
+that tomato were fertilized with hen manure as well).} \emph{• Talk
+about effect of treatment on root + soil diversity.}\\
+\emph{• Talk about the fact in the roots, we most likely sequenced the
+plant itself, rather than the bacteria.}\\
+\emph{• Discuss some of the candidate ASVs from Figure 7.}
 
 \newpage  
 
@@ -555,9 +659,19 @@ roots) associated with productivity measures} ~\\
 \addcontentsline{toc}{section}{REFERENCES}
 
 \hypertarget{refs}{}
+\hypertarget{ref-altschul1997gapped}{}
+Altschul SF., Madden TL., Schäffer AA., Zhang J., Zhang Z., Miller W.,
+Lipman DJ. 1997. Gapped blast and psi-blast: A new generation of protein
+database search programs. \emph{Nucleic acids research} 25:3389--3402.
+
 \hypertarget{ref-anderson2001new}{}
 Anderson MJ. 2001. A new method for non-parametric multivariate analysis
 of variance. \emph{Austral ecology} 26:32--46.
+
+\hypertarget{ref-anderson1999empirical}{}
+Anderson MJ., Legendre P. 1999. An empirical comparison of permutation
+methods for tests of partial regression coefficients in a linear model.
+\emph{Journal of statistical computation and simulation} 62:271--303.
 
 \hypertarget{ref-silva}{}
 Callahan B. 2018. Silva for dada2: Silva taxonomic training data
@@ -636,6 +750,10 @@ Wang Q., Garrity GM., Tiedje JM., Cole JR. 2007. Naive bayesian
 classifier for rapid assignment of rRNA sequences into the new bacterial
 taxonomy. \emph{Applied and environmental microbiology} 73:5261--5267.
 
+\hypertarget{ref-wickham2016ggplot2}{}
+Wickham H. 2016. \emph{Ggplot2: Elegant graphics for data analysis}.
+Springer.
+
 \hypertarget{ref-wickham2015dplyr}{}
 Wickham H., Francois R., Henry L., Müller K. 2015. Dplyr: A grammar of
 data manipulation. \emph{R package version 0.4} 3.
@@ -645,4 +763,8 @@ Wright ES. 2016. Using decipher v2. 0 to analyze big biological sequence
 data in r. \emph{R Journal} 8.
 
 
+
+
+\newpage
+\singlespacing 
 \end{document}
